--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "@nuxt/content": "^2.13.0",
     "@nuxt/devtools": "latest",
+    "@nuxt/image": "^1.7.0",
     "@nuxt/ui": "latest",
     "@nuxtjs/i18n": "^8.0.0",
     "@tailwindcss/typography": "latest",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "latest",
     "lodash-es": "^4.17.21",
     "nuxt": "3.10.x",
